--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.2",
+    "net": "^1.0.2",
     "rc-virtual-list": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,8 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
