--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.2",
+    "jwt-decode": "^4.0.0",
     "net": "^1.0.2",
     "rc-virtual-list": "^3.11.3",
     "react": "^18.2.0",
